k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: localhost.mart
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontned-frontend
            port:
              number: 80

  - host: localhost.portfolio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio
            port:
              number: 80
